Add action behind the button meld het ons

--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -37,15 +37,7 @@
         <span
           class="au-u-flex au-u-flex--column au-u-text-right au-u-flex--end"
         >
-          <p>
-            Zie je een fout in de data?
-          </p>
-          <AuLinkExternal
-            class="au-u-flex--end au-u-flex-self-end"
-            @href="mailto:"
-          >
-            Meld het ons!
-          </AuLinkExternal>
+          <ReportWrongData />
         </span>
       </section>
 
