--- a/app/components/app-header.hbs
+++ b/app/components/app-header.hbs
@@ -1,7 +1,7 @@
 <AuMainHeader
   @brandLink="https://www.vlaanderen.be/nl"
   @homeRoute="index"
-  @appTitle="Data Monitoring"
+  @appTitle="Data Monitoring Tool"
 >
   <li class="au-c-list-horizontal__item">
     <AuLink @route="help" @skin="secondary" @icon="question-circle">
