Hide export button for demo

--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -26,7 +26,7 @@
             {{/if}}
           </AuPill>
         </AuHeading>
-        <AuButton>Exporteer rapport</AuButton>
+        {{! <AuButton>Exporteer rapport</AuButton> }}
       </section>
       <section class="au-u-flex au-u-flex--between au-u-margin-top-tiny">
         <p>
