Change label to without title/description

--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -184,7 +184,7 @@
               </p>
             </span>
             <span class="au-u-flex au-u-flex--column au-u-margin-top-small">
-              <p class="au-u-medium">Aantal agendapunten met titels
+              <p class="au-u-medium">Aantal agendapunten zonder titels
                 <AuLinkExternal
                   href="{{this.lokaalBeslistUrl}}agendapunten?gemeentes={{this.currentSession.group.name}}&trefwoord=-title*"
                   class="au-u-h6 au-u-margin-left-tiny"
@@ -202,7 +202,7 @@
               </p>
             </span>
             <span class="au-u-flex au-u-flex--column au-u-margin-top-small">
-              <p class="au-u-medium">Aantal agendapunten met beschrijving
+              <p class="au-u-medium">Aantal agendapunten zonder beschrijving
                 <AuLinkExternal
                   href="{{this.lokaalBeslistUrl}}agendapunten?gemeentes={{this.currentSession.group.name}}&trefwoord=-description*"
                   class="au-u-h6 au-u-margin-left-tiny"
